<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MyTatva</string>
    <string name="freshchat_file_provider_authority">com.mytatva.patient.provider</string>
    <string name="freshchatDisableFrame">2f39cb5bcd0d3d7bff9743aca69fb4c4</string>
    <string name="apxor_key_value">37765d29-ed97-4ecd-aed4-06d231986ff6</string>
    <string name="facebook_app_id">1020564072473249</string>
    <string name="AZ_az">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="AZ_az_dot_single_coat">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ.\'</string>
    <string name="AZaz">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="digit_0_to_9">0123456789</string>
    <string name="alpha_numeric_with_hyphen">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789-</string>
    <string name="connection_exception">No Internet connection. Please check your Internet connection and try again.</string>
    <string name="socket_time_out_exception">Connection timeout</string>
    <string name="other_exception">Something is wrong here</string>
    <string name="label_select_image">Select Image</string>
    <string name="label_select_video">Select Video</string>
    <string name="label_g_camera">Camera</string>
    <string name="label_gallery">Gallery</string>
    <string name="label_upload_documents">Select Document</string>
    <string name="label_syncing">Syncing In Progress</string>
    <string name="scan_permission_msg">Please allow permissions to use the scanner</string>
    <string name="validation_invalid_qr_code" tools:ignore="ExtraTranslation">Invalid QR code</string>
    <string name="symbol_rupee">₹</string>
    <string name="alert_skip_coachmark">Please click on ☰ to go over the app tour whenever you’d like</string>
    <string name="message_goal_info">Goals given on MyTatva are purely suggestive. Please consult your Doctor or Health Coach for personalised goals.</string>
    <string name="label_edit">Edit</string>
    <string name="label_delete">Delete</string>
    <string name="alert_msg_delete">Are you sure you want to delete?</string>
    <string name="alert_msg_add_appointment_to_calendar">Do you want to add this appointment to Calendar?</string>
    <string-array name="monthDayTitle" tools:ignore="ExtraTranslation">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="permissions_needed">Camera and Microphone permissions needed. Please allow in App Settings for additional functionality.</string>
    <string name="error_retrieving_access_token">Error retrieving token</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="codec_title">Set your preferred audio and video codec. Not all codecs are supported with Group rooms. The media server will fallback to OPUS or VP8 if a preferred codec is not supported.</string>
    <string name="pref_title_audio_codec">Audio Codec</string>
    <string name="pref_title_video_codec">Video Codec</string>
    <string name="sender_bandwidth_constraints">Set sender bandwidth constraints. Zero represents the WebRTC default value which varies by codec.</string>
    <string name="max_audio_bitrate">Max Audio Bitrate (bits per second)</string>
    <string name="max_video_bitrate">Max Video Bitrate (bits per second)</string>
    <string name="vp8_simulcast">VP8 Simulcast</string>
    <string name="audio_device">Audio Device</string>
    <string name="room_screen_select_device">Select Device</string>
    <string name="alert_msg_cancel_appointment">Are you sure you want to cancel appointment?</string>
    <string name="label_avg_reading_of_others_">Average reading of others -</string>
    <string name="label_average_goal_adherence">Your average %1$s adherence in the past month is %2$s; average %3$s adherence of other patients is %4$s</string>
    <string name="common_validation_empty_access_code">Please enter access code</string>
    <string name="common_validation_empty_name">Please enter name</string>
    <string name="validation_valid_name">Please enter valid name</string>
    <string name="common_validation_empty_first_name">Please enter first name</string>
    <string name="validation_valid_first_name">Please enter valid first name</string>
    <string name="common_validation_empty_last_name">Please enter last name</string>
    <string name="validation_valid_last_name">Please enter valid last name</string>
    <string name="common_validation_empty_email">Please enter email address</string>
    <string name="common_validation_invalid_email">Looks like the email address is invalid. Please enter a valid email address.</string>
    <string name="common_validation_empty_password">Please enter password</string>
    <string name="common_validation_min_password">Please enter minimum of 8 characters for password</string>
    <string name="common_validation_invalid_password_pattern">Please enter password with at least one uppercase letter, one lowercase letter, one number and one special character</string>
    <string name="common_validation_empty_confirm_password">Please enter confirm password</string>
    <string name="common_validation_password_mismatch">Password and confirm password do not match</string>
    <string name="common_validation_empty_dob">Please enter DOB</string>
    <string name="common_validation_agree_terms">Please agree to the terms and conditions</string>
    <string name="common_validation_select_medical_condition">Please select condition</string>
    <string name="common_validation_empty_mobile_number">Please enter mobile number</string>
    <string name="common_validation_invalid_mobile_number">Invalid mobile number. Please don\'t add 0 or +91 before Phone number</string>
    <string name="common_validation_empty_otp">Please enter OTP</string>
    <string name="common_validation_invalid_otp">Please enter valid OTP</string>
    <string name="common_validation_select_language">Please select language</string>
    <string name="common_validation_select_state">Please select state</string>
    <string name="common_validation_select_city">Please select city</string>
    <string name="validation_empty_medicine_name">Please enter medicine name</string>
    <string name="validation_select_dosage">Please select dosage</string>
    <string name="validation_select_start_date">Please select start date</string>
    <string name="validation_select_end_date">Please select end date</string>
    <string name="validation_select_days">Please select days</string>
    <string name="validation_add_medication">Please add medication</string>
    <string name="validation_add_goal">Please add goal</string>
    <string name="validation_add_reading">Please add reading</string>
    <string name="validation_empty_height">Please enter height</string>
    <string name="validation_empty_weight">Please enter weight</string>
    <string name="validation_empty_target_weight">Please enter target weight</string>
    <string name="validation_empty_target_duration">Please select target duration</string>
    <string name="validation_empty_question">Please enter question</string>
    <string name="validation_select_category">Please select category</string>
    <string name="validation_empty_answer">Please enter answer</string>
    <string name="validation_select_date">Please select date</string>
    <string name="validation_select_time">Please select time</string>
    <string name="validation_select_exercise">Please select exercise</string>
    <string name="validation_select_food_type">Please select food type</string>
    <string name="validation_add_food_dish">Please add food dish</string>
    <string name="validation_valid_time">Please select valid time</string>
    <string name="validation_select_start_date_time">Please select start date and time</string>
    <string name="validation_select_end_date_time">Please select end date and time</string>
    <string name="validation_valid_end_date_time">Please select valid end date and time</string>
    <string name="validation_empty_pin_code">Please enter pincode</string>
    <string name="validation_valid_pin_code">Please enter valid pincode</string>
    <string name="validation_empty_query">Please enter query</string>
    <string name="validation_empty_house_number_and_building">Please enter house number and building</string>
    <string name="validation_valid_house_number_and_building">Please enter minimum of 25 characters for house number and building</string>
    <string name="validation_empty_full_address">Please enter full address</string>
    <string name="validation_empty_house_and_building">Please enter house number and building</string>
    <string name="validation_valid_full_address">Please enter minimum of 25 characters for full address</string>
    <string name="validation_valid_house_and_building">Please enter minimum of 25 characters for house number and building</string>
    <string name="validation_empty_street_name">Please enter street name</string>
    <string name="validation_empty_age">Please enter age</string>
    <string name="validation_select_clinic">Please select clinic</string>
    <string name="validation_select_doctor">Please select doctor</string>
    <string name="validation_select_coach">Please select coach</string>
    <string name="validation_select_appointment_type">Please select appointment type</string>
    <string name="labtest_add_address_label_name">Name *</string>
    <string name="labtest_add_address_hint_enter_name">Enter</string>
    <string name="labtest_add_address_label_mobile_number">Mobile Number *</string>
    <string name="labtest_add_address_hint_enter_number">Enter</string>
    <string name="labtest_add_address_label_pin_code">Pincode *</string>
    <string name="labtest_add_address_hint_enter_pin_code">Enter</string>
    <string name="labtest_add_address_label_house_number_and_building">House Number and Building *</string>
    <string name="labtest_add_address_hint_enter_house_no">Enter</string>
    <string name="labtest_add_address_label_street_name">Street Name *</string>
    <string name="labtest_add_address_hint_enter_street_name">Enter</string>
    <string name="labtest_add_address_label_address_type">Address Type *</string>
    <string name="labtest_add_address_label_home">Home</string>
    <string name="labtest_add_address_label_work">Work</string>
    <string name="labtest_add_address_label_other">Other</string>
    <string name="labtest_add_address_button_save">Save</string>
    <string name="add_patient_label_name">Name *</string>
    <string name="add_patient_hint_enter_name">Enter name</string>
    <string name="add_patient_label_email">Email *</string>
    <string name="add_patient_hint_enter_email">Enter email</string>
    <string name="add_patient_label_age">Age *</string>
    <string name="add_patient_hint_enter_age">Enter age</string>
    <string name="add_patient_label_gender">Gender *</string>
    <string name="add_patient_label_male">Male</string>
    <string name="add_patient_label_female">Female</string>
    <string name="add_patient_label_other">Other</string>
    <string name="add_patient_label_relation">Relation</string>
    <string name="add_patient_hint_select_relation">Select</string>
    <string name="add_patient_button_save">Save</string>
    <string name="add_patient_label_email_disclaimer">User will receive updates of order status and soft copy of reports on this email address</string>
    <string name="add_patient_label_relation_disclaimer">Select the relation of the new user with</string>
</resources>