<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/layoutHeader"
        layout="@layout/layout_common_toolbar_with_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutHeader">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideLineStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/screen_space" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideLineEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/screen_space" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/layoutContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
                app:layout_constraintStart_toStartOf="@id/guideLineStart"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewLabelName"
                    style="@style/TextView.Medium.sp_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:text="@string/labtest_add_address_label_name"
                    android:textColor="@color/textBlack1" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextName"
                    style="@style/editTextStroke"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/dp_8"
                    android:hint="@string/labtest_add_address_hint_enter_name"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:digits="@string/AZ_az_dot_single_coat"
                    android:maxLength="50"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewLabelMobileNumber"
                    style="@style/TextView.Medium.sp_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:text="@string/labtest_add_address_label_mobile_number"
                    android:textColor="@color/textBlack1" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextMobileNumber"
                    style="@style/editTextStroke"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/dp_8"
                    android:hint="@string/labtest_add_address_hint_enter_number"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:maxLines="1" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewLabelPinCode"
                    style="@style/TextView.Medium.sp_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:text="@string/labtest_add_address_label_pin_code"
                    android:textColor="@color/textBlack1" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextPinCode"
                    style="@style/editTextStroke"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/dp_8"
                    android:hint="@string/labtest_add_address_hint_enter_pin_code"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLines="1"
                    android:maxLength="6"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewLabelHouseNumberBuilding"
                    style="@style/TextView.Medium.sp_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:text="@string/labtest_add_address_label_house_number_and_building"
                    android:textColor="@color/textBlack1" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextHouseNumberBuilding"
                    style="@style/editTextStroke"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/dp_8"
                    android:hint="@string/labtest_add_address_hint_enter_house_no"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewLabelStreetName"
                    style="@style/TextView.Medium.sp_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:text="@string/labtest_add_address_label_street_name"
                    android:textColor="@color/textBlack1" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextStreetName"
                    style="@style/editTextStroke"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/dp_8"
                    android:hint="@string/labtest_add_address_hint_enter_street_name"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewLabelAddressType"
                    style="@style/TextView.Medium.sp_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:text="@string/labtest_add_address_label_address_type"
                    android:textColor="@color/textBlack1" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/radioHome"
                        style="@style/radioAddressType"
                        android:checked="true"
                        android:drawableStart="@drawable/ic_address_home"
                        android:text="@string/labtest_add_address_label_home" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/radioWork"
                        style="@style/radioAddressType"
                        android:layout_marginHorizontal="@dimen/dp_24"
                        android:drawableStart="@drawable/ic_address_work"
                        android:text="@string/labtest_add_address_label_work" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/radioOther"
                        style="@style/radioAddressType"
                        android:drawableStart="@drawable/ic_address_other"
                        android:text="@string/labtest_add_address_label_other" />

                </RadioGroup>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonSave"
                style="@style/buttonSolid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_space"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginEnd="@dimen/screen_space"
                android:layout_marginBottom="@dimen/dp_24"
                android:text="@string/labtest_add_address_button_save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutContent"
                app:layout_constraintVertical_bias="1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>